--- a/EZ_skin/package.json
+++ b/EZ_skin/package.json
@@ -35,7 +35,9 @@
     "framer-motion": "^11.2.6",
     "next": "^14.2.4",
     "react": "^18.2.0",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.0",
     "react-scroll": "^1.9.0",
     "sass": "^1.69.1",
