--- a/EZ_skin/package.json
+++ b/EZ_skin/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"next dev\"",
     "build": "next build",
-    "start": "next start",
+    "start": "next dev",
     "lint": "next lint",
     "eslint": "eslint .",
     "check-types": "tsc --pretty --noEmit",
