--- a/EZ_skin/package.json
+++ b/EZ_skin/package.json
@@ -22,7 +22,8 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
-
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^5.16.0",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "@xfaider/node-steam-inventory": "^1.1.0",
@@ -64,7 +65,6 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.1",
     "file-loader": "^6.2.0",
-    "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "postcss": "^8.4.28",
     "prettier": "^3.0.1",
